--- a/ERP/templates/partials/base.html
+++ b/ERP/templates/partials/base.html
@@ -101,6 +101,8 @@
     <script src="{% static 'libs/pace-js/pace.min.js'%}"></script>
     <!-- HTMX -->
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <!-- Pristine.js (local) to avoid CDN/tracking blocks -->
+    <script src="{% static 'libs/pristinejs/dist/pristine.min.js' %}"></script>
     <!-- Toastr -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     {% block extra_js %}
