--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -354,16 +354,28 @@
                         <li><a href="{% url 'enterprise:department_list' %}">Departments</a></li>
                         <li><a href="{% url 'enterprise:position_list' %}">Positions</a></li>
                         <li><a href="{% url 'enterprise:employee_list' %}">Employees</a></li>
+                        <li><a href="{% url 'enterprise:paycomponent_list' %}">Pay Components</a></li>
+                        <li><a href="{% url 'enterprise:payroll_run_list' %}">Payroll Runs</a></li>
+                        <li><a href="{% url 'enterprise:payroll_run_line_list' %}">Payroll Lines</a></li>
                         <li><a href="{% url 'enterprise:payroll_cycle_list' %}">Payroll Cycles</a></li>
                         <li><a href="{% url 'enterprise:payroll_entry_list' %}">Payroll Entries</a></li>
                         <li><a href="{% url 'enterprise:fixedasset_list' %}">Fixed Assets</a></li>
                         <li><a href="{% url 'enterprise:depreciation_schedule_list' %}">Depreciation Schedules</a></li>
+                        <li><a href="{% url 'enterprise:depreciation_report' %}">Depreciation Report</a></li>
                         <li><a href="{% url 'enterprise:bom_list' %}">Bills of Material</a></li>
+                        <li><a href="{% url 'enterprise:workcenter_list' %}">Work Centers</a></li>
+                        <li><a href="{% url 'enterprise:routing_list' %}">Routings</a></li>
                         <li><a href="{% url 'enterprise:workorder_list' %}">Work Orders</a></li>
+                        <li><a href="{% url 'enterprise:workorder_operation_list' %}">Work Order Operations</a></li>
+                        <li><a href="{% url 'enterprise:mrp_suggestions' %}">MRP Suggestions</a></li>
                         <li><a href="{% url 'enterprise:crmlead_list' %}">Leads</a></li>
                         <li><a href="{% url 'enterprise:opportunity_list' %}">Opportunities</a></li>
                         <li><a href="{% url 'enterprise:budget_list' %}">Budgets</a></li>
+                        <li><a href="{% url 'enterprise:budget_variance' %}">Budget Variance</a></li>
                         <li><a href="{% url 'enterprise:integrationendpoint_list' %}">Integrations</a></li>
+                        <li><a href="{% url 'enterprise:integrationcredential_list' %}">Credentials</a></li>
+                        <li><a href="{% url 'enterprise:webhooksubscription_list' %}">Webhooks</a></li>
+                        <li><a href="{% url 'enterprise:observability' %}">Observability</a></li>
                         <li><a href="{% url 'enterprise:localeconfig_list' %}">Localization &amp; Tax</a></li>
                     </ul>
                 </li>
