--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -341,6 +341,8 @@
                         <li><a href="{% url 'inventory:categories' %}">Categories</a></li>
                         <li><a href="{% url 'inventory:warehouses' %}">Warehouses</a></li>
                         <li><a href="{% url 'inventory:stock_movements' %}">Stock Movements</a></li>
+                        <li><a href="{% url 'inventory:stock_receipt_create' %}">Record Stock Receipt</a></li>
+                        <li><a href="{% url 'inventory:stock_issue_create' %}">Record Stock Issue</a></li>
                     </ul>
                 </li>
 
