--- a/ERP/accounting/templates/accounting/journal_entry.html
+++ b/ERP/accounting/templates/accounting/journal_entry.html
@@ -91,6 +91,11 @@
               data-config-url="{{ config_endpoint }}"
               data-lookup-account="{% url 'accounting:journal_account_lookup' %}"
               data-lookup-cost-center="{% url 'accounting:journal_cost_center_lookup' %}"
+              data-prefs-url="{{ prefs_endpoint }}"
+              data-prefs-save-url="{{ prefs_save_endpoint }}"
+              data-attach-upload="{{ attachment_upload_endpoint }}"
+              data-attach-delete="{{ attachment_delete_endpoint }}"
+              data-payment-terms="{{ payment_terms_endpoint }}"
               data-default-journal-type="{{ journal_default_type }}"
               data-initial-journal-id="{{ initial_journal_id }}"
               data-detail-url-template="{{ detail_url_template }}"
